--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@graphql-tools/load-files": "^6.5.3",
     "apollo-server": "^3.6.7",
+    "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
     "graphql-subscriptions": "^2.0.0",
     "merge-graphql-schemas": "^1.7.8",
